--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,15 +1,20 @@
 {
   "dependencies": {
-    "com.unity.2d.spriteshape": "3.0.18",
+    "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.2d.tilemap": "1.0.0",
-    "com.unity.addressables": "1.18.19",
-    "com.unity.collab-proxy": "1.14.1",
-    "com.unity.ide.visualstudio": "2.0.14",
+    "com.unity.addressables": "1.21.21",
+    "com.unity.ai.navigation": "1.1.5",
+    "com.unity.collab-proxy": "2.4.3",
+    "com.unity.feature.2d": "2.0.1",
+    "com.unity.feature.characters-animation": "1.0.0",
+    "com.unity.ide.visualstudio": "2.0.22",
     "com.unity.ide.vscode": "1.2.5",
-    "com.unity.render-pipelines.universal": "7.7.1",
-    "com.unity.test-framework": "1.1.31",
-    "com.unity.textmeshpro": "2.1.6",
-    "com.unity.timeline": "1.2.18",
+    "com.unity.inputsystem": "1.7.0",
+    "com.unity.render-pipelines.universal": "14.0.11",
+    "com.unity.terrain-tools": "5.0.4",
+    "com.unity.test-framework": "1.1.33",
+    "com.unity.textmeshpro": "3.0.9",
+    "com.unity.timeline": "1.7.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
