--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "com.github-glitchenzo.nugetforunity": "4.1.1",
     "com.unity.2d.spriteshape": "9.0.4",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.addressables": "1.21.21",
